# improved-cloud-selection

./: .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html
.github/: README.md  dependabot.yml
.github/workflows/: main.yml
404/: index.html
_next/data/7rQJuFqg0sJ8v7aRovp64/: index.json
_next/data/82IIYmudUhhL96eXuzWZ2/: index.json
_next/data/UqvoXNKf-aZW5VlBvV5AS/: index.json
_next/data/YEpfgV6aNpOHX3QTnJZ-K/: index.json
_next/data/fQAs2W1diHpqKTvHmJx0t/: index.json
_next/data/iQfJVJ4AmdUT3D4FR4CWh/: index.json
_next/data/kw161dOE6YROdqLI9FlaH/: index.json
_next/static/41ror-no_7Vaql1CxEiow/: _buildManifest.js
_next/static/4Wdw95FgxZV-zrRbUbuhu/: _buildManifest.js
_next/static/5-qDFAFFv6gF7cQp-YJgy/: _buildManifest.js
_next/static/5SzWJcBLpbj5wVeSgR7Nn/: _buildManifest.js
_next/static/5olceZoAs936wR_UeL1rL/: _buildManifest.js
_next/static/Ai3SpmHSgO1rCiCMCc-V7/: _buildManifest.js
_next/static/BPoi2hx0N-P528I_jJEWM/: _buildManifest.js
_next/static/Cg_PoETu8xClxunycIyBi/: _buildManifest.js
_next/static/DOtOo_7ew2hlA2dlGkxjR/: _buildManifest.js
_next/static/FiIy5oqNM9fMCo2TTQU8a/: _buildManifest.js
_next/static/J6opetvRvZtPH572F0XX2/: _buildManifest.js
_next/static/JSK0qgxoBbl7V7ejx8Cyz/: _buildManifest.js
_next/static/KWbgp8WaAwiqqpya59Pa5/: _buildManifest.js
_next/static/MmNkCSZSzFoopBdRgNOln/: _buildManifest.js
_next/static/PHYUOX8nlwROhGcS5t51B/: _buildManifest.js
_next/static/PbF_Cfcjriv8MMgB997yT/: _buildManifest.js
_next/static/QS0FNwDoHvUVSCo8Bi7io/: _buildManifest.js
_next/static/QU9iMpIIIMlfBRj-v29bh/: _buildManifest.js
_next/static/chunks/: 207-492f7bbff99b95e7.js  (+48 more)
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup.cfg  test_all.sh
backend/improved_cloud_selection/: config.py  main.py
backend/improved_cloud_selection/api/: clouds.py  geo_coordinates.py  ping.py
backend/tests/: conftest.py  test_clouds.py  test_geo_coordinates.py  test_ping.py
backend/tests/data/: clouds.json
docs/: deployment.md  local.md
frontend/: .env.development  .env.production  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  codecept.conf.js  jest.config.js  next.config.js  package.json  steps.d.ts
frontend/components/: Cloud.tsx  CloudList.tsx  CloudProviders.module.css  CloudProviders.module.scss  CloudProviders.tsx  NavigatorLocationButton.module.css  NavigatorLocationButton.tsx  RegionsList.module.css  RegionsList.module.scss  RegionsList.tsx
frontend/constants/: paths.ts  types.ts  values.ts
frontend/e2e/: clouds_test.js  clouds_test.ts
frontend/hooks/: index.ts  useClouds.ts  useLocationByIP.ts  useNavigatorLocation.ts  useOrganizedClouds.ts  useSetInitialProvider.ts  useSetInitialRegion.ts
frontend/pages/: _document.tsx  index.tsx
frontend/styles/: Home.module.css  globals.css
frontend/test/: axiosMock.ts  navigatorMock.ts  testUtils.ts  testUtils.tsx
(+51 files in other folders)
