[tool.poetry]
name = "improved-cloud-selection"
version = "0.1.0"
description = "Improved cloud selection"
authors = ["Roman Mkrtchian <mkrtchia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
requests = "^2.27.1"
fastapi-redis-cache = "^0.2.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
black = "^22.1"
isort = "^5.10.1"
pytest-xdist = "^2.5.0"
mccabe = "^0.6.1"
darglint = "^1.8.0"
flake8-isort = "^4.0.0"
flake8-pytest = "^1.3"
flake8-pytest-style = "^1.6.0"
flake8-bandit = "^3.0.0"
flake8-comprehensions = "^3.8.0"
flake8-docstrings = "^1.6.0"
flake8-string-format = "^0.3.0"
flake8-bugbear = "^22.3.20"
flake8-debugger = "^4.0.0"
flake8-eradicate = "^1.2.0"
flake8-broken-line = "^0.4.0"
pep8-naming = "^0.12.1"
mypy = "^0.941"
pre-commit = "^2.17.0"
types-requests = "^2.27.12"

[tool.isort]
profile = "black"
